Version 0.7.0
- Changing composite behaviour: Composite tags are now included as standard!
- New method MiniExiftool.opts which returns a hash of the standard
  options used for MiniExiftool.new
- New option :convert_encoding for MiniExiftool.new which uses the -L-option
  of the exiftool command-line application (see online documentation for it)
  Thanks to Henning Kulander for the causing of this change.

Version 0.6.0
- New methods for serialization:
  - MiniExiftool.from_hash
  - MiniExiftool.from_yaml
  - MiniExiftool#to_hash
  - MiniExiftool#to_yaml
  Thanks to Andrew Bennett for the initial idea of YAML-serialization
- Refactoring of tests
- Small documetation update

Version 0.5.1
- Warning "parenthesize argument(s) for future version" removed
  Thanks to Greg from knobby.ws

Version 0.5.0
- New option :timestamps to create DateTime objects instead of Time objects
  for timestamps (Fixing bug #16328)
- Invalid values of timestamps (i.e. 0000:00:00 00:00:00) are now mapped 
  to false

Version 0.4.1
- Compatibility for Ruby 1.9

Version 0.4.0
- MiniExiftool::Error inherits now from StandardError
- Alternative installation via setup.rb
- Bugfix
  Saving of non-readed tags doesn't work with tags with hyphen
  Thanks to Robin Romahn for reporting the bug
- New methods: MiniExiftool.all_tags and MiniExiftool.original_tag
- Interna: Original tag names (all and writable) are now saved via pstore in
  a file for better performance

Version 0.3.1
- Typos fixed

Version 0.3.0
- Documentation completed and a Mini Tutorial added
- Interface changes:
  - Test if a value for a tag can be saved is now done in
    MiniExiftool#save
    => There is no check at the moment you set a value:
       the tag occurs in MiniExiftool#changed_values
    => While calling MiniExiftool#save errors can occur (see next point)
  - MiniExiftool#save is a transaction: if one or more error occurs the file is
    not changed! In such a case the errors can be found in MiniExiftool#errors