@@ -1,3 +1,4 @@
+- Tag SubjectLocation is not longer an array value but a string value!
 Version 0.7.0
 - Changing composite behaviour: Composite tags are now included as standard!
 - New method MiniExiftool.opts which returns a hash of the standard
